--- a/applications/processor/pom.xml
+++ b/applications/processor/pom.xml
@@ -21,6 +21,7 @@
         <module>twitter-trend-processor</module>
         <module>image-recognition-processor</module>
         <module>object-detection-processor</module>
+        <module>semantic-segmentation-processor</module>
     </modules>
 
 </project>
