--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
@@ -40,6 +40,9 @@ processor.filter=docker:springcloudstream/filter-processor-kafka:@filter-process
 processor.groovy=docker:springcloudstream/groovy-processor-kafka:@groovy-processor-docker.tag@
 processor.header-enricher=docker:springcloudstream/header-enricher-processor-kafka:@header-enricher-processor-docker.tag@
 processor.http-request=docker:springcloudstream/http-request-processor-kafka:@http-request-processor-docker.tag@
+processor.image-recognition=docker:springcloudstream/image-recognition-processor-kafka:@image-recognition-processor-docker.tag@
+processor.object-detection=docker:springcloudstream/object-detection-processor-kafka:@object-detection-processor-docker.tag@
+processor.semantic-segmentation=docker:springcloudstream/semantic-segmentation-processor-kafka:@semantic-segmentation-processor-docker.tag@
 processor.script=docker:springcloudstream/script-processor-kafka:@script-processor-docker.tag@
 processor.splitter=docker:springcloudstream/splitter-processor-kafka:@splitter-processor-docker.tag@
 processor.transform=docker:springcloudstream/transform-processor-kafka:@transform-processor-docker.tag@
