--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
@@ -40,6 +40,9 @@ processor.filter=docker:springcloudstream/filter-processor-rabbit:@filter-proces
 processor.groovy=docker:springcloudstream/groovy-processor-rabbit:@groovy-processor-docker.tag@
 processor.header-enricher=docker:springcloudstream/header-enricher-processor-rabbit:@header-enricher-processor-docker.tag@
 processor.http-request=docker:springcloudstream/http-request-processor-rabbit:@http-request-processor-docker.tag@
+processor.image-recognition=docker:springcloudstream/image-recognition-processor-rabbit:@image-recognition-processor-docker.tag@
+processor.object-detection=docker:springcloudstream/object-detection-processor-rabbit:@object-detection-processor-docker.tag@
+processor.semantic-segmentation=docker:springcloudstream/semantic-segmentation-processor-rabbit:@semantic-segmentation-processor-docker.tag@
 processor.script=docker:springcloudstream/script-processor-rabbit:@script-processor-docker.tag@
 processor.splitter=docker:springcloudstream/splitter-processor-rabbit:@splitter-processor-docker.tag@
 processor.transform=docker:springcloudstream/transform-processor-rabbit:@transform-processor-docker.tag@
