--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven.properties
@@ -82,6 +82,12 @@ processor.header-enricher=maven://org.springframework.cloud.stream.app:header-en
 processor.header-enricher.metadata=maven://org.springframework.cloud.stream.app:header-enricher-processor-kafka:jar:metadata:@header-enricher-processor.version@
 processor.http-request=maven://org.springframework.cloud.stream.app:http-request-processor-kafka:@http-request-processor.version@
 processor.http-request.metadata=maven://org.springframework.cloud.stream.app:http-request-processor-kafka:jar:metadata:@http-request-processor.version@
+processor.image-recognition=maven://org.springframework.cloud.stream.app:image-recognition-processor-kafka:@image-recognition-processor.version@
+processor.image-recognition.metadata=maven://org.springframework.cloud.stream.app:image-recognition-processor-kafka:jar:metadata:@image-recognition-processor.version@
+processor.object-detection=maven://org.springframework.cloud.stream.app:object-detection-processor-kafka:@object-detection-processor.version@
+processor.object-detection.metadata=maven://org.springframework.cloud.stream.app:object-detection-processor-kafka:jar:metadata:@object-detection-processor.version@
+processor.semantic-segmentation=maven://org.springframework.cloud.stream.app:semantic-segmentation-processor-kafka:@semantic-segmentation-processor.version@
+processor.semantic-segmentation.metadata=maven://org.springframework.cloud.stream.app:semantic-segmentation-processor-kafka:jar:metadata:@semantic-segmentation-processor.version@
 processor.script=maven://org.springframework.cloud.stream.app:script-processor-kafka:@script-processor.version@
 processor.script.metadata=maven://org.springframework.cloud.stream.app:script-processor-kafka:jar:metadata:@script-processor.version@
 processor.splitter=maven://org.springframework.cloud.stream.app:splitter-processor-kafka:@splitter-processor.version@
