--- a/applications/sink/router-sink/pom.xml
+++ b/applications/sink/router-sink/pom.xml
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>org.springframework.cloud.fn</groupId>
             <artifactId>payload-converter-function</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0-M1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
