--- a/functions/common/tensorflow-common/pom.xml
+++ b/functions/common/tensorflow-common/pom.xml
@@ -4,14 +4,14 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<artifactId>tensorflow-common</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0-M1</version>
 	<name>tensorflow-common</name>
 	<description>tensorflow common</description>
 
 	<parent>
 		<groupId>org.springframework.cloud.fn</groupId>
 		<artifactId>spring-functions-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0-M1</version>
 		<relativePath>../../spring-functions-parent</relativePath>
 	</parent>
 
@@ -28,11 +28,6 @@
 
 
 	<dependencies>
-		<!--		<dependency>-->
-		<!--			<groupId>org.tensorflow</groupId>-->
-		<!--			<artifactId>tensorflow-core-platform</artifactId>-->
-		<!--			<version>0.1.0-SNAPSHOT</version>-->
-		<!--		</dependency>-->
 		<dependency>
 			<groupId>org.tensorflow</groupId>
 			<artifactId>tensorflow</artifactId>
