--- a/functions/function/task-launch-request-function/pom.xml
+++ b/functions/function/task-launch-request-function/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.cloud.fn</groupId>
 		<artifactId>spring-functions-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0-M1</version>
 		<relativePath>../../spring-functions-parent</relativePath>
 	</parent>
 
