--- a/applications/stream-applications-core/common/stream-applications-composite-function-support/pom.xml
+++ b/applications/stream-applications-core/common/stream-applications-composite-function-support/pom.xml
@@ -21,7 +21,7 @@
 	<parent>
 		<groupId>org.springframework.cloud.stream.app</groupId>
 		<artifactId>stream-applications-core</artifactId>
-		<version>3.0.0-SNAPSHOT</version>
+		<version>3.0.0-M1</version>
 		<relativePath>../..</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
