--- a/applications/stream-applications-core/common/stream-applications-postprocessor-common/pom.xml
+++ b/applications/stream-applications-core/common/stream-applications-postprocessor-common/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>stream-applications-core</artifactId>
         <groupId>org.springframework.cloud.stream.app</groupId>
-        <version>3.0.0-SNAPSHOT</version>
+        <version>3.0.0-M1</version>
         <relativePath>../..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
