Add gauge support for the Counter Consumer
 - Add Micrometer GAUGE Meter metrics. Add new counter.meter-type property to select between counter and gauge meter types.
 - Add tests and stock-exchange demo application.
 - Update counter-consumer README.

 Resolves: https://github.com/spring-cloud/stream-applications/issues/69

--- a/functions/consumer/counter-consumer/pom.xml
+++ b/functions/consumer/counter-consumer/pom.xml
@@ -43,6 +43,21 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-wavefront</artifactId>
+			<version>1.5.1</version>
+			<scope>test</scope>
+		</dependency>
+
+
 	</dependencies>
 
 </project>
