rename couner (consumer|sink) to analytics (consumer|sink). Remove the custom SpEL convert in favor of config-common

--- a/applications/sink/pom.xml
+++ b/applications/sink/pom.xml
@@ -10,8 +10,8 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>analytics-sink</module>
         <module>cassandra-sink</module>
-        <module>counter-sink</module>
         <module>file-sink</module>
         <module>ftp-sink</module>
         <module>geode-sink</module>
