--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
@@ -16,7 +16,7 @@ source.twitter-search=docker:springcloudstream/twitter-search-source-kafka:@twit
 source.twitter-stream=docker:springcloudstream/twitter-stream-source-kafka:@twitter-stream-source-docker.tag@
 source.websocket=docker:springcloudstream/websocket-source-kafka:@websocket-source-docker.tag@
 sink.cassandra=docker:springcloudstream/cassandra-sink-kafka:@cassandra-sink-docker.tag@
-sink.counter=docker:springcloudstream/counter-sink-kafka:@counter-sink-docker.tag@
+sink.analytics=docker:springcloudstream/analytics-sink-kafka:@analytics-sink-docker.tag@
 sink.file=docker:springcloudstream/file-sink-kafka:@file-sink-docker.tag@
 sink.ftp=docker:springcloudstream/ftp-sink-kafka:@ftp-sink-docker.tag@
 sink.geode=docker:springcloudstream/geode-sink-kafka:@geode-sink-docker.tag@
