--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven.properties
@@ -34,8 +34,8 @@ source.websocket=maven://org.springframework.cloud.stream.app:websocket-source-k
 source.websocket.metadata=maven://org.springframework.cloud.stream.app:websocket-source-kafka:jar:metadata:@websocket-source.version@
 sink.cassandra=maven://org.springframework.cloud.stream.app:cassandra-sink-kafka:@cassandra-sink.version@
 sink.cassandra.metadata=maven://org.springframework.cloud.stream.app:cassandra-sink-kafka:jar:metadata:@cassandra-sink.version@
-sink.counter=maven://org.springframework.cloud.stream.app:counter-sink-kafka:@counter-sink.version@
-sink.counter.metadata=maven://org.springframework.cloud.stream.app:counter-sink-kafka:jar:metadata:@counter-sink.version@
+sink.analytics=maven://org.springframework.cloud.stream.app:analytics-sink-kafka:@analytics-sink.version@
+sink.analytics.metadata=maven://org.springframework.cloud.stream.app:analytics-sink-kafka:jar:metadata:@analytics-sink.version@
 sink.file=maven://org.springframework.cloud.stream.app:file-sink-kafka:@file-sink.version@
 sink.file.metadata=maven://org.springframework.cloud.stream.app:file-sink-kafka:jar:metadata:@file-sink.version@
 sink.ftp=maven://org.springframework.cloud.stream.app:ftp-sink-kafka:@ftp-sink.version@
