--- a/applications/stream-applications-build/stream-applications-docs/pom.xml
+++ b/applications/stream-applications-build/stream-applications-docs/pom.xml
@@ -140,7 +140,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud.fn</groupId>
-			<artifactId>counter-consumer</artifactId>
+			<artifactId>analytics-consumer</artifactId>
 			<version>${java-functions.version}</version>
 		</dependency>
 		<dependency>
