--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven-repo-url.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven-repo-url.properties
@@ -34,8 +34,8 @@ source.websocket=https://@repo-spring-io@/org/springframework/cloud/stream/app/w
 source.websocket.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-source-kafka/@websocket-source.version@/websocket-source-kafka-@websocket-source.version@-metadata.jar
 sink.cassandra=https://@repo-spring-io@/org/springframework/cloud/stream/app/cassandra-sink-kafka/@cassandra-sink.version@/cassandra-sink-kafka-@cassandra-sink.version@.jar
 sink.cassandra.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/cassandra-sink-kafka/@cassandra-sink.version@/cassandra-sink-kafka-@cassandra-sink.version@-metadata.jar
-sink.counter=https://@repo-spring-io@/org/springframework/cloud/stream/app/counter-sink-kafka/@counter-sink.version@/counter-sink-kafka-@counter-sink.version@.jar
-sink.counter.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/counter-sink-kafka/@counter-sink.version@/counter-sink-kafka-@counter-sink.version@-metadata.jar
+sink.analytics=https://@repo-spring-io@/org/springframework/cloud/stream/app/analytics-sink-kafka/@analytics-sink.version@/analytics-sink-kafka-@analytics-sink.version@.jar
+sink.analytics.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/analytics-sink-kafka/@analytics-sink.version@/analytics-sink-kafka-@analytics-sink.version@-metadata.jar
 sink.file=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-sink-kafka/@file-sink.version@/file-sink-kafka-@file-sink.version@.jar
 sink.file.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-sink-kafka/@file-sink.version@/file-sink-kafka-@file-sink.version@-metadata.jar
 sink.ftp=https://@repo-spring-io@/org/springframework/cloud/stream/app/ftp-sink-kafka/@ftp-sink.version@/ftp-sink-kafka-@ftp-sink.version@.jar
