--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
@@ -16,7 +16,7 @@ source.twitter-search=docker:springcloudstream/twitter-search-source-rabbit:@twi
 source.twitter-stream=docker:springcloudstream/twitter-stream-source-rabbit:@twitter-stream-source-docker.tag@
 source.websocket=docker:springcloudstream/websocket-source-rabbit:@websocket-source-docker.tag@
 sink.cassandra=docker:springcloudstream/cassandra-sink-rabbit:@cassandra-sink-docker.tag@
-sink.counter=docker:springcloudstream/counter-sink-rabbit:@counter-sink-docker.tag@
+sink.analytics=docker:springcloudstream/analytics-sink-rabbit:@analytics-sink-docker.tag@
 sink.file=docker:springcloudstream/file-sink-rabbit:@file-sink-docker.tag@
 sink.ftp=docker:springcloudstream/ftp-sink-rabbit:@ftp-sink-docker.tag@
 sink.geode=docker:springcloudstream/geode-sink-rabbit:@geode-sink-docker.tag@
