--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
@@ -34,8 +34,8 @@ source.websocket=maven://org.springframework.cloud.stream.app:websocket-source-r
 source.websocket.metadata=maven://org.springframework.cloud.stream.app:websocket-source-rabbit:jar:metadata:@websocket-source.version@
 sink.cassandra=maven://org.springframework.cloud.stream.app:cassandra-sink-rabbit:@cassandra-sink.version@
 sink.cassandra.metadata=maven://org.springframework.cloud.stream.app:cassandra-sink-rabbit:jar:metadata:@cassandra-sink.version@
-sink.counter=maven://org.springframework.cloud.stream.app:counter-sink-rabbit:@counter-sink.version@
-sink.counter.metadata=maven://org.springframework.cloud.stream.app:counter-sink-rabbit:jar:metadata:@counter-sink.version@
+sink.analytics=maven://org.springframework.cloud.stream.app:analytics-sink-rabbit:@analytics-sink.version@
+sink.analytics.metadata=maven://org.springframework.cloud.stream.app:analytics-sink-rabbit:jar:metadata:@analytics-sink.version@
 sink.file=maven://org.springframework.cloud.stream.app:file-sink-rabbit:@file-sink.version@
 sink.file.metadata=maven://org.springframework.cloud.stream.app:file-sink-rabbit:jar:metadata:@file-sink.version@
 sink.ftp=maven://org.springframework.cloud.stream.app:ftp-sink-rabbit:@ftp-sink.version@
