--- a/functions/common/config-common/pom.xml
+++ b/functions/common/config-common/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>config-common</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>geode-common</name>
+    <name>config-common</name>
     <description>Function Common Configuration Components</description>
 
     <parent>
