--- a/functions/common/twitter-common/pom.xml
+++ b/functions/common/twitter-common/pom.xml
@@ -38,9 +38,11 @@
             <artifactId>spring-integration-ip</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-integration</artifactId>
+            <groupId>org.springframework.cloud.fn</groupId>
+            <artifactId>config-common</artifactId>
+            <version>${spring-cloud-fn.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
