--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
@@ -9,6 +9,7 @@ source.mongodb=docker:springcloudstream/mongodb-source-kafka:@mongodb-source-doc
 source.mqtt=docker:springcloudstream/mqtt-source-kafka:@mqtt-source-docker.tag@
 source.rabbit=docker:springcloudstream/rabbit-source-kafka:@rabbit-source-docker.tag@
 source.s3=docker:springcloudstream/s3-source-kafka:@s3-source-docker.tag@
+source.sftp=docker:springcloudstream/sftp-source-kafka:@sftp-source-docker.tag@
 source.tcp=docker:springcloudstream/tcp-source-kafka:@tcp-source-docker.tag@
 source.time=docker:springcloudstream/time-source-kafka:@time-source-docker.tag@
 source.twitter-message=docker:springcloudstream/twitter-message-source-kafka:@twitter-message-source-docker.tag@
