--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven.properties
@@ -20,6 +20,8 @@ source.rabbit=maven://org.springframework.cloud.stream.app:rabbit-source-kafka:@
 source.rabbit.metadata=maven://org.springframework.cloud.stream.app:rabbit-source-kafka:jar:metadata:@rabbit-source.version@
 source.s3=maven://org.springframework.cloud.stream.app:s3-source-kafka:@s3-source.version@
 source.s3.metadata=maven://org.springframework.cloud.stream.app:s3-source-kafka:jar:metadata:@s3-source.version@
+source.sftp=maven://org.springframework.cloud.stream.app:sftp-source-kafka:@sftp-source.version@
+source.sftp.metadata=maven://org.springframework.cloud.stream.app:sftp-source-kafka:jar:metadata:@sftp-source.version@
 source.tcp=maven://org.springframework.cloud.stream.app:tcp-source-kafka:@tcp-source.version@
 source.tcp.metadata=maven://org.springframework.cloud.stream.app:tcp-source-kafka:jar:metadata:@tcp-source.version@
 source.time=maven://org.springframework.cloud.stream.app:time-source-kafka:@time-source.version@
