--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
@@ -9,6 +9,7 @@ source.mongodb=docker:springcloudstream/mongodb-source-rabbit:@mongodb-source-do
 source.mqtt=docker:springcloudstream/mqtt-source-rabbit:@mqtt-source-docker.tag@
 source.rabbit=docker:springcloudstream/rabbit-source-rabbit:@rabbit-source-docker.tag@
 source.s3=docker:springcloudstream/s3-source-rabbit:@s3-source-docker.tag@
+source.sftp=docker:springcloudstream/sftp-source-rabbit:@sftp-source-docker.tag@
 source.tcp=docker:springcloudstream/tcp-source-rabbit:@tcp-source-docker.tag@
 source.time=docker:springcloudstream/time-source-rabbit:@time-source-docker.tag@
 source.twitter-message=docker:springcloudstream/twitter-message-source-rabbit:@twitter-message-source-docker.tag@
