--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven-repo-url.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven-repo-url.properties
@@ -20,6 +20,8 @@ source.rabbit=https://@repo-spring-io@/org/springframework/cloud/stream/app/rabb
 source.rabbit.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/rabbit-source-rabbit/@rabbit-source.version@/rabbit-source-rabbit-@rabbit-source.version@-metadata.jar
 source.s3=https://@repo-spring-io@/org/springframework/cloud/stream/app/s3-source-rabbit/@s3-source.version@/s3-source-rabbit-@s3-source.version@.jar
 source.s3.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/s3-source-rabbit/@s3-source.version@/s3-source-rabbit-@s3-source.version@-metadata.jar
+source.sftp=https://@repo-spring-io@/org/springframework/cloud/stream/app/sftp-source-rabbit/@sftp-source.version@/sftp-source-rabbit-@sftp-source.version@.jar
+source.sftp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/sftp-source-rabbit/@sftp-source.version@/sftp-source-rabbit-@sftp-source.version@-metadata.jar
 source.tcp=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-source-rabbit/@tcp-source.version@/tcp-source-rabbit-@tcp-source.version@.jar
 source.tcp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-source-rabbit/@tcp-source.version@/tcp-source-rabbit-@tcp-source.version@-metadata.jar
 source.time=https://@repo-spring-io@/org/springframework/cloud/stream/app/time-source-rabbit/@time-source.version@/time-source-rabbit-@time-source.version@.jar
