Add the wavefront-consumer and sink to the s-app-descriptor and s-app-docs

--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven-repo-url.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven-repo-url.properties
@@ -38,6 +38,8 @@ sink.cassandra=https://@repo-spring-io@/org/springframework/cloud/stream/app/cas
 sink.cassandra.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/cassandra-sink-kafka/@cassandra-sink.version@/cassandra-sink-kafka-@cassandra-sink.version@-metadata.jar
 sink.analytics=https://@repo-spring-io@/org/springframework/cloud/stream/app/analytics-sink-kafka/@analytics-sink.version@/analytics-sink-kafka-@analytics-sink.version@.jar
 sink.analytics.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/analytics-sink-kafka/@analytics-sink.version@/analytics-sink-kafka-@analytics-sink.version@-metadata.jar
+sink.wavefront=https://@repo-spring-io@/org/springframework/cloud/stream/app/wavefront-sink-kafka/@wavefront-sink.version@/wavefront-sink-kafka-@wavefront-sink.version@.jar
+sink.wavefront.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/wavefront-sink-kafka/@wavefront-sink.version@/wavefront-sink-kafka-@wavefront-sink.version@-metadata.jar
 sink.file=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-sink-kafka/@file-sink.version@/file-sink-kafka-@file-sink.version@.jar
 sink.file.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-sink-kafka/@file-sink.version@/file-sink-kafka-@file-sink.version@-metadata.jar
 sink.ftp=https://@repo-spring-io@/org/springframework/cloud/stream/app/ftp-sink-kafka/@ftp-sink.version@/ftp-sink-kafka-@ftp-sink.version@.jar
