--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
@@ -18,6 +18,7 @@ source.twitter-stream=docker:springcloudstream/twitter-stream-source-rabbit:@twi
 source.websocket=docker:springcloudstream/websocket-source-rabbit:@websocket-source-docker.tag@
 sink.cassandra=docker:springcloudstream/cassandra-sink-rabbit:@cassandra-sink-docker.tag@
 sink.analytics=docker:springcloudstream/analytics-sink-rabbit:@analytics-sink-docker.tag@
+sink.wavefront=docker:springcloudstream/wavefront-sink-rabbit:@wavefront-sink-docker.tag@
 sink.file=docker:springcloudstream/file-sink-rabbit:@file-sink-docker.tag@
 sink.ftp=docker:springcloudstream/ftp-sink-rabbit:@ftp-sink-docker.tag@
 sink.geode=docker:springcloudstream/geode-sink-rabbit:@geode-sink-docker.tag@
