--- a/applications/stream-applications-build/stream-applications-descriptor/pom.xml
+++ b/applications/stream-applications-build/stream-applications-descriptor/pom.xml
@@ -83,6 +83,8 @@
                 "${cassandra-sink.version}".contains('SNAPSHOT') ? 'latest' : "${cassandra-sink.version}"
         pom.properties['analytics-sink-docker.tag']=
                 "${analytics-sink.version}".contains('SNAPSHOT') ? 'latest' : "${analytics-sink.version}"
+        pom.properties['wavefront-sink-docker.tag']=
+                "${wavefront-sink.version}".contains('SNAPSHOT') ? 'latest' : "${wavefront-sink.version}"
         pom.properties['file-sink-docker.tag']=
                 "${file-sink.version}".contains('SNAPSHOT') ? 'latest' : "${file-sink.version}"
         pom.properties['ftp-sink-docker.tag']=
