--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
@@ -38,6 +38,8 @@ sink.cassandra=maven://org.springframework.cloud.stream.app:cassandra-sink-rabbi
 sink.cassandra.metadata=maven://org.springframework.cloud.stream.app:cassandra-sink-rabbit:jar:metadata:@cassandra-sink.version@
 sink.analytics=maven://org.springframework.cloud.stream.app:analytics-sink-rabbit:@analytics-sink.version@
 sink.analytics.metadata=maven://org.springframework.cloud.stream.app:analytics-sink-rabbit:jar:metadata:@analytics-sink.version@
+sink.wavefront=maven://org.springframework.cloud.stream.app:wavefront-sink-rabbit:@wavefront-sink.version@
+sink.wavefront.metadata=maven://org.springframework.cloud.stream.app:wavefront-sink-rabbit:jar:metadata:@wavefront-sink.version@
 sink.file=maven://org.springframework.cloud.stream.app:file-sink-rabbit:@file-sink.version@
 sink.file.metadata=maven://org.springframework.cloud.stream.app:file-sink-rabbit:jar:metadata:@file-sink.version@
 sink.ftp=maven://org.springframework.cloud.stream.app:ftp-sink-rabbit:@ftp-sink.version@
