--- a/applications/source/rabbit-source/pom.xml
+++ b/applications/source/rabbit-source/pom.xml
@@ -32,7 +32,6 @@
         <dependency>
             <groupId>org.springframework.cloud.fn</groupId>
             <artifactId>rabbit-supplier</artifactId>
-            <version>${java-functions.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -80,12 +79,11 @@
                         <dependency>
                             <groupId>org.springframework.cloud.fn</groupId>
                             <artifactId>rabbit-supplier</artifactId>
-                            <version>${java-functions.version}</version>
                         </dependency>
                         <dependency>
                             <groupId>org.springframework.cloud.stream.app</groupId>
                             <artifactId>stream-applications-composite-function-support</artifactId>
-                            <version>${project.version}</version>
+                            <version>${stream-apps-core.version}</version>
                         </dependency>
                     </dependencies>
                 </configuration>
