--- a/applications/source/ftp-source/pom.xml
+++ b/applications/source/ftp-source/pom.xml
@@ -24,18 +24,16 @@
         <dependency>
             <groupId>org.springframework.cloud.fn</groupId>
             <artifactId>ftp-supplier</artifactId>
-            <version>${java-functions.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud.fn</groupId>
             <artifactId>function-test-support</artifactId>
-            <version>${java-functions.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud.stream.app</groupId>
             <artifactId>stream-applications-composite-function-support</artifactId>
-            <version>${project.version}</version>
+            <version>${stream-apps-core.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -60,12 +58,11 @@
                         <dependency>
                             <groupId>org.springframework.cloud.fn</groupId>
                             <artifactId>ftp-supplier</artifactId>
-                            <version>${java-functions.version}</version>
                         </dependency>
                         <dependency>
                             <groupId>org.springframework.cloud.stream.app</groupId>
                             <artifactId>stream-applications-composite-function-support</artifactId>
-                            <version>${project.version}</version>
+                            <version>${stream-apps-core.version}</version>
                         </dependency>
                     </dependencies>
                 </configuration>
