--- a/applications/source/jdbc-source/pom.xml
+++ b/applications/source/jdbc-source/pom.xml
@@ -30,7 +30,6 @@
         <dependency>
             <groupId>org.springframework.cloud.fn</groupId>
             <artifactId>jdbc-supplier</artifactId>
-            <version>${java-functions.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -70,12 +69,11 @@
                         <dependency>
                             <groupId>org.springframework.cloud.fn</groupId>
                             <artifactId>jdbc-supplier</artifactId>
-                            <version>${java-functions.version}</version>
                         </dependency>
                         <dependency>
                             <groupId>org.springframework.cloud.stream.app</groupId>
                             <artifactId>stream-applications-composite-function-support</artifactId>
-                            <version>${project.version}</version>
+                            <version>${stream-apps-core.version}</version>
                         </dependency>
                     </dependencies>
                 </configuration>
