--- a/applications/source/time-source/pom.xml
+++ b/applications/source/time-source/pom.xml
@@ -24,12 +24,11 @@
         <dependency>
             <groupId>org.springframework.cloud.fn</groupId>
             <artifactId>time-supplier</artifactId>
-            <version>${java-functions.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud.stream.app</groupId>
             <artifactId>stream-applications-composite-function-support</artifactId>
-            <version>${project.version}</version>
+            <version>${stream-apps-core.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -59,7 +58,7 @@
                         <dependency>
                             <groupId>org.springframework.cloud.stream.app</groupId>
                             <artifactId>stream-applications-composite-function-support</artifactId>
-                            <version>${project.version}</version>
+                            <version>${stream-apps-core.version}</version>
                         </dependency>
                     </dependencies>
                 </configuration>
