--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -62,6 +62,13 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>org.springframework.cloud.fn</groupId>
+                <artifactId>function-dependencies</artifactId>
+                <version>${java-functions.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-stream-dependencies</artifactId>
                 <version>${spring-cloud-stream-dependencies.version}</version>
@@ -239,6 +246,11 @@
                             <item>rabbit</item>
                         </binders>
                         <boms>
+                            <dependency>
+                                <groupId>org.springframework.cloud.fn</groupId>
+                                <artifactId>function-dependencies</artifactId>
+                                <version>${java-functions.version}</version>
+                            </dependency>
                             <dependency>
                                 <groupId>org.springframework.cloud</groupId>
                                 <artifactId>spring-cloud-stream-dependencies</artifactId>
