--- a/functions/pom.xml
+++ b/functions/pom.xml
@@ -100,6 +100,7 @@
 		<module>supplier/twitter-supplier</module>
 
 		<module>spring-functions-parent</module>
+		<module>function-dependencies</module>
 	</modules>
 
 	<licenses>
