--- a/applications/processor/http-request-processor/pom.xml
+++ b/applications/processor/http-request-processor/pom.xml
@@ -69,6 +69,7 @@
                         <dependency>
                             <groupId>org.springframework.cloud.stream.app</groupId>
                             <artifactId>http-request-processor</artifactId>
+                            <version>${project.version}</version>
                         </dependency>
                     </dependencies>
 
