--- a/applications/processor/image-recognition-processor/pom.xml
+++ b/applications/processor/image-recognition-processor/pom.xml
@@ -61,6 +61,7 @@
                         <dependency>
                             <groupId>org.springframework.cloud.stream.app</groupId>
                             <artifactId>image-recognition-processor</artifactId>
+                            <version>${project.version}</version>
                         </dependency>
                     </dependencies>
 
